--- a/index.html
+++ b/index.html
@@ -9,25 +9,34 @@
   </head>
   <body>
     <div class="calculator-wrapper">
-      <div class="number-displayer">hello</div>
+      <div class="number-displayer">0</div>
       <div class="math-operators">
-        <button class="double-value">C</button>
-        <button class=""><-</button>
-        <button class="division operator">/</button>
-        <button class="">7</button>
-        <button class="">8</button>
-        <button class="">9</button>
-        <button class="multiplication operator">*</button>
-        <button class="">4</button>
-        <button class="">5</button>
-        <button class="">6</button>
+        <button class="double-value clear-val">C</button>
+        <button class="backspace">←</button>
+        <button class="division operator">÷</button>
+      </div>
+      <div class="math-operators">
+        <button class="numbers">7</button>
+        <button class="numbers">8</button>
+        <button class="numbers">9</button>
+        <button class="multiplication operator">×</button>
+      </div>
+      <div class="math-operators">
+        <button class="numbers">4</button>
+        <button class="numbers">5</button>
+        <button class="numbers">6</button>
         <button class="addition operator">+</button>
-        <button class="">1</button>
-        <button class="">2</button>
-        <button class="">3</button>
+      </div>
+      <div class="math-operators">
+        <button class="numbers">1</button>
+        <button class="numbers">2</button>
+        <button class="numbers">3</button>
         <button class="subtraction operator">-</button>
-        <button class="triple-value">0</button>
+      </div>
+      <div class="math-operators">
+        <button class="numbers triple-value">0</button>
         <button class="equal operator">=</button>
     </div>
+    <script type="text/javascript" src="./index.js"></script>
   </body>
 </html>
